Table "vaults" {
  "owner" varchar(64) [pk, not null]
  "vault_address" varchar(64) [not null]
  "token_account" varchar(64) [not null]
  "total_balance" int8 [not null, default: 0]
  "locked_balance" int8 [not null, default: 0]
  "available_balance" int8 [not null, default: 0]
  "total_deposited" int8 [not null, default: 0]
  "total_withdrawn" int8 [not null, default: 0]
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "status" varchar(20) [not null, default: 'active']

  Checks {
    `(total_balance >= 0) AND (locked_balance >= 0) AND (available_balance >= 0)` [name: 'positive_balances']
    `total_balance = (locked_balance + available_balance)` [name: 'balance_consistency']
  }

  Indexes {
    status [type: btree, name: "idx_vaults_status"]
    updated_at [type: btree, name: "idx_vaults_updated_at"]
  }
}

Table "transactions" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "vault_owner" varchar(64) [not null]
  "transaction_type" varchar(20) [not null]
  "amount" int8 [not null, check: `amount >= 0`]
  "signature" varchar(128)
  "status" varchar(20) [not null, default: 'pending']
  "balance_before" int8 [not null]
  "balance_after" int8 [not null]
  "counterparty" varchar(64)
  "note" text
  "created_at" timestamptz [not null, default: `now()`]
  "updated_at" timestamptz [not null, default: `now()`]
  "confirmed_at" timestamptz

  Indexes {
    created_at [type: btree, name: "idx_transactions_created_at"]
    signature [type: btree, name: "idx_transactions_signature"]
    status [type: btree, name: "idx_transactions_status"]
    transaction_type [type: btree, name: "idx_transactions_type"]
    vault_owner [type: btree, name: "idx_transactions_vault_owner"]
  }
}

Table "balance_snapshots" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "vault_owner" varchar(64) [not null]
  "total_balance" int8 [not null]
  "locked_balance" int8 [not null]
  "available_balance" int8 [not null]
  "timestamp" timestamptz [not null, default: `now()`]
  "snapshot_type" varchar(20) [not null, default: 'periodic']

  Indexes {
    timestamp [type: btree, name: "idx_snapshots_timestamp"]
    (vault_owner, timestamp) [type: btree, name: "idx_snapshots_vault_time"]
  }
}

Table "reconciliation_logs" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "vault_owner" varchar(64)
  "expected_balance" int8 [not null]
  "actual_balance" int8 [not null]
  "difference" int8 [not null]
  "auto_fixed" bool [not null, default: false]
  "notes" text
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    difference [type: btree, name: "idx_reconciliation_difference"]
    vault_owner [type: btree, name: "idx_reconciliation_vault"]
  }
}

Table "tvl_snapshots" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "total_value_locked" int8 [not null]
  "active_vaults" int8 [not null]
  "total_locked" int8 [not null]
  "total_available" int8 [not null]
  "timestamp" timestamptz [not null, default: `now()`]

  Indexes {
    timestamp [type: btree, name: "idx_tvl_timestamp"]
  }
}

Table "alerts" {
  "id" uuid [pk, not null, default: `gen_random_uuid()`]
  "severity" varchar(20) [not null]
  "alert_type" varchar(50) [not null]
  "vault_owner" varchar(64)
  "message" text [not null]
  "data" jsonb
  "acknowledged" bool [not null, default: false]
  "created_at" timestamptz [not null, default: `now()`]
  "acknowledged_at" timestamptz

  Indexes {
    (severity, created_at) [type: btree, name: "idx_alerts_severity"]
    created_at [type: btree, name: "idx_alerts_unacknowledged"]
  }
}

Ref "balance_snapshots_vault_owner_fkey":"vaults"."owner" < "balance_snapshots"."vault_owner"

Ref "transactions_vault_owner_fkey":"vaults"."owner" < "transactions"."vault_owner"
